<resources>
    <string name="app_name">Bit Talk</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="field_empty">This field cannot be empty</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="ask_sign_out">Are you sure you want to sign out?</string>
    <string name="search">Search</string>
    <string name="add_contact">Add Contact</string>
    <string name="contacts">Contacts</string>
    <string name="conversations">Conversations</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="type_here">Type here...</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="new_messages">You have new messages</string>
    <string name="unknown_error">Unknown error</string>
    <string name="passwords_do_not_match">Passwords does \'not match</string>
    <string name="success_on_create_user">Success on create user</string>
    <string name="success_on_save_user">Success on save user</string>
    <string name="add_email_contact">Type below the email of the person you want to add</string>
    <string name="email_empty">Email field is empty</string>
    <string name="new_contact">New contact:</string>
    <string name="user_not_found">User not found</string>
    <string name="success">Success</string>
</resources>
